[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-Stupe"
version = "4.4.0"
description = "a.k.a. « Flask on steroids »"
readme = "README.rst"
authors = [
    {name = "Guillaume Gelin"}
]
license = {text = "MIT"}
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "flask==2.1.3",
  "pymongo==4.2.0",
  "werkzeug==2.2.2",
  "marshmallow==3.17.0",
  "python-dateutil==2.9.0.post0",
]

[project.urls]
Homepage = "https://github.com/numberly/flask-stupe"

[tool.setuptools]
packages = ["flask_stupe"]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
